# EISFELD_BRANT_PROJEKT

./: .gitignore  CMakeLists.txt  README.md  helper.cpp  helper.hpp  main.cpp
GUI/: BoundingBox.cpp  BoundingBox.hpp  Extractor.cpp  Extractor.hpp  GUI.cpp  GUI.hpp  Label.cpp  Label.hpp
Menu/Class Files/: menu.cpp  menu.hpp
Models/: Frame.cpp  Frame.hpp  FrameFactory.cpp  FrameFactory.hpp  MultiGameFrame.cpp  MultiGameFrame.hpp  SingleGameFrame.cpp  SingleGameFrame.hpp
projektTest/: CMakeLists.txt  test.cpp
